--- a/[neofetch]config.conf
+++ b/[neofetch]config.conf
@@ -4,25 +4,25 @@ print_info() {
     info title
     info underline
 
-    prin "╭──────────── $(color 10)Software$() ────────────"
-    info "│ OS" distro
-#    info "│ Kernel" kernel
-#    info "│ Packages" packages
-#    info "│ Shell" shell
-    info "│ WM" wm
-    info "│ Theme" theme
-    info "│ Icons" icons
-    info "│ Terminal" term
-    info "│ Terminal Font" term_font
-    prin "├──────────── $(color 10)Hardware$() ────────────"
-    info "│ Host" model
-    info "│ CPU" cpu
-    info "│ GPU" gpu
-    info "│ Memory" memory
-    info "│ Disk" disk
-    prin "├───────────── $(color 10)Uptime$() ─────────────"
-    info "│" uptime
-    prin "╰──────────────────────────────────"
+    prin "$(color 7)╭────────────────── $(color 10)Software$() $(color 7)──────────────────"
+    info "$(color 7)│ $(color 14)OS" distro
+#    info "$(color 7)│ $(color 14)Kernel" kernel
+#    info "$(color 7)│ $(color 14)Packages" packages
+#    info "$(color 7)│ $(color 14)Shell" shell
+    info "$(color 7)│ $(color 14)WM" wm
+    info "$(color 7)│ $(color 14)Theme" theme
+    info "$(color 7)│ $(color 14)Icons" icons
+    info "$(color 7)│ $(color 14)Terminal" term
+    info "$(color 7)│ $(color 14)Terminal Font" term_font
+    prin "$(color 7)├────────────────── $(color 10)Hardware$() $(color 7)──────────────────"
+    info "$(color 7)│ $(color 14)Host" model
+    info "$(color 7)│ $(color 14)CPU" cpu
+    info "$(color 7)│ $(color 14)GPU" gpu
+    info "$(color 7)│ $(color 14)Memory" memory
+    info "$(color 7)│ $(color 14)Disk" disk
+    prin "$(color 7)├─────────────────── $(color 10)Uptime$() $(color 7)───────────────────"
+    info "$(color 7)│" uptime
+    prin "$(color 7)╰──────────────────────────────────────────────"
 
     # info "CPU Usage" cpu_usage
     # info "Song" song
